# mutranscriber

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  flake.nix  result  test_audio.json  test_audio.srt  test_audio.tsv  test_audio.txt  test_audio.vtt
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
diagnostics/: README.md  compare_diagnostics.py  reference_diagnostics.py
src/: audio_encoder.rs  config.rs  lib.rs  main.rs  mel.rs  model.rs  qwen3_decoder.rs  transcriber.rs  wav.rs
tests/: integration_test.rs
tests/fixtures/: autoresearch_expected_repeat6.txt  autoresearch_expected_short.txt  test_audio.txt
