[package]
name = "mutranscriber"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool to transcribe video files using Qwen3-ASR"

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-flash-attn = { version = "0.9", optional = true }
candle-transformers = "0.9"
clap = { version = "4.5", features = ["derive"] }
hf-hub = { version = "0.4", default-features = false, features = [
  "tokio",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = "0.22"
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional dependencies for audio extraction
gstreamer = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true }

# CLI dependencies (optional)

[features]
default = ["gstreamer"]
gstreamer = ["dep:gstreamer", "dep:gstreamer-app"]
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:candle-flash-attn",
]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
